feat: Basic project setup
- Add bower to install client-side libraries
- Add package.json
- Add basic testing framework via Karma
- Add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ pids
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 jspm_packages
+client/lib
 
 # Optional npm cache directory
 .npm
