--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "bower": "*",
-    "express": "^4.4.5"
+    "express": "^4.4.5",
+    "mongoose": "^4.7.2"
   },
   "devDependencies": {
     "chai": "*",
